Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Allow overpaying invoice
* Show lines to pay on invoice form
* Add invoice date on credit wizard
* Take lines without maturity date as payable

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Prevent using same sequence on earlier customer invoice
* Update invoice sequence name in renew fiscal year
* Add option to cancel customer invoice

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Show reconciliation lines as payment lines
* Fill in origin of move line
* Remove partial payment when cancel
* Set cancel state when credit with refund

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Use accounting date to format invoice number
* Add invoice payment method
* Show number and reference in invoice rec_name
* Remove support for Python 2.7
* Use today as fallback for invoice date report

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Show invoice payment on Move Line
* Remove payment lines which actually do not pay the Invoice
* Ensure payment lines are linked to only one Invoice
* Ensure payments on Invoice does not exceed invoice amount
* Add methods to add and remove payments on Invoice
* Check pending invoice to erase party
* Add invoice usage to party's contact mechanisms
* Show reconciled date on invoice
* Make description on invoice line optional

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Use tax sequence as default value for invoice taxes sequence
* Add party tax identifier on invoice

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Use Match pattern for invoice sequences

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add tax identifier on invoice
* Rename Invoice.create_move to get_move
* Rename InvoiceLine and InvoiceTax get_move_line to get_move_lines
* Change Invoice.set_number into classmethod