@@ -192,7 +192,7 @@ Credit invoice::
     >>> credit_note.total_amount == -invoice.total_amount
     True
 
-Create a posted and a draft invoice  to cancel::
+Create a posted and a draft invoice to cancel::
 
     >>> invoice = Invoice()
     >>> invoice.type = 'in'
@@ -210,7 +210,7 @@ Cancel draft invoice::
 
     >>> invoice_draft.click('cancel')
     >>> invoice_draft.state
-    'cancel'
+    'cancelled'
     >>> invoice_draft.move
     >>> invoice_draft.reconciled
 
@@ -218,7 +218,7 @@ Cancel posted invoice::
 
     >>> invoice.click('cancel')
     >>> invoice.state
-    'cancel'
+    'cancelled'
     >>> invoice.cancel_move is not None
     True
     >>> invoice.reconciled == today
